msg-manifest/msg-istio-gateway-ssl.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: msg-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port: 
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: bhokkali-credential
    hosts:
    - "bhokkali.com"
