msg-manifest/msg-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msg-ingress
  namespace: msg
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "msg-static-ip"
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: msg-ui
      port:
        number: 80
