msg-manifest/msg-istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata: 
  name: msg
spec:
  hosts:
  - "bhokkali.com"
  gateways:
  - msg-gateway
  http:
  - match:
    - uri:
        prefix: /api/v1/getAcademicYearsList
    route:
    - destination:
        host: bhokkali-services.msg.svc.cluster.local
        port:
          number: 8090
  - match:
    - uri:
        prefix: /api/v1/getProducts
    route:
    - destination:
        host: msg-main.msg.svc.cluster.local
        port:
          number: 9000
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: bhokkali-ui.msg.svc.cluster.local
        port:
          number: 3000
